--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -1,52 +1,95 @@
-this is cart page
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="cart-table clearfix">
+                <table class="table table-responsive">
+                    <thead>
+                        <tr>
+                            <th>Products</th>
+                            <th style="text-align: left;">Size</th>
+                            <th>Category</th>
+                            <th>Quantity</th>
+                            <th>Price</th>
+                            <th>TOTAL</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% products.forEach((item,i) => { %>
+                            <tr>
+                                <td class="cart_product_img">
+                                    <a href="#"><img src="<%=item.product.imagPaths[0]%>" alt="Product"></a>
+                                    <h5><%= item.product.name %></h5>
+                                </td>
+                                <td>
+                                    <h5 style="text-align: left;"><%= item.size%></h5>
+                                </td>
+                                <td>
+                                    <h5><%= item.product.category %></h5>
+                                </td>
+                                <td class="qty">
+                                    <div class="quantity">
+                                        <a href="/cart/sub/<%=i%>"><span class="qty-minus"><i class="fa fa-minus" aria-hidden="true"></i></span></a>
+                                        <h5 class="qty-text"><%= item.quantity %> </h5>
+                                        <a href="/cart/add/<%=i%>"><span class="qty-plus"><i class="fa fa-plus" aria-hidden="true"></i></span></a>   
+                                    </div>
+                                </td>
+                                <td class="price"><span>RS <%=item.product.price%></span></td>
+                                <td class="total_price"><span>RS <%= item.product.price*item.quantity%></span></td>
+                                <td class="action"><a href="/cart/remove/<%=i%>"><i class="icon_close"></i></a></td>
+                            </tr>
+                        <% }); %> 
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <hr>
 
-
-
-
-
-<table border="5">
-    <tr>
-        <th>
-            ITEM NAME
-        </th>
-        <th>
-            PREVIEW
-        </th>
-        <th>
-            SIZE
-        </th>
-        <th>
-            CATEGORY
-        </th>
-        <th>
-            QUANTUTY
-        </th>
-        <th>
-            SUB TOTAL
-        </th>
-    </tr>
-    <% products.forEach(item => { %>
-        <tr>
-            <td>
-                <%= item.product.name %> 
-            </td>
-            <td>
-                <img src="<%=item.product.imagPaths[0]%> " alt="product image" width="75" height="100">
-            </td>
-            <td>
-                <%= item.size %> 
-            </td>
-            <td>
-                <%= item.product.category %> 
-            </td>
-            <td>
-                <%= item.quantity %> 
-            </td>
-            <td>
-                <%= item.product.price*item.quantity%> 
-            </td>
-        </tr>
+    <div class="row">
+        <% if(products.length>0){%>
+            <form action=""></form>
+        <!-- delivery details -->
+        <div class="col-12 col-lg-6">
+            <h4>Delivery Details</h4>
+            <br>
+                <form action="/order" method="POST">
+                    <div class="row">
+                        <div class="form-group col-md-6">
+                            <label>Name</label>
+                            <input type="text" class="form-control" name="name" value="<%=locals.user.firstName%>">
+                        </div>
+                        <div class="form-grou col-md-6">
+                            <label>Mobile</label>
+                            <input type="text" class="form-control" name="mobile" value="<%=locals.user.mobile%>">
+                        </div>   
+                    </div>
+                    
+                    <div class="form-group">
+                        <label>Address Line 1</label>
+                        <input type="text" class="form-control" name="address1st" value="<%=locals.user.address1st%>">
+                    </div>
+                    <div class="form-group">
+                        <label>Address Line 2</label>
+                        <input type="text" class="form-control" name="address2nd" value="<%=locals.user.address2nd%>">
+                    </div>
+                    
+                    <button type="submit" class="btn btn-success">Place Order</button>
+                </form>
+        </div>
+        <%} %> 
         
-    <% }); %> 
 
-</table>
+        <!-- Cart Totals -->
+        <div class="col-12 col-lg-6">
+            <br><br><br><br><br>
+            <center>
+                <h2>Cart Total</h2>
+                <h1>Rs: <%=total%>.00/= </h1>
+            </center>
+        </div>
+    </div>
+</div>
+<br>
+
